--- a/style.css
+++ b/style.css
@@ -4,3 +4,12 @@
     bottom: 0;
     width: 100%;
 }
+
+.mapboxgl-popup {
+    max-width: 400px;
+    font:
+        12px/20px 'Helvetica Neue',
+        Arial,
+        Helvetica,
+        sans-serif;
+}
