--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 .mapboxgl-popup {
     max-width: 400px;
+    word-wrap: break-word;
     font:
         12px/20px 'Helvetica Neue',
         Arial,
