--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*This controls the size and location of the map*/
 .map-container {
     position: absolute;
     top: 0;
@@ -5,6 +6,7 @@
     width: 100%;
 }
 
+/*This controls the aesthetics of the popup*/
 .mapboxgl-popup {
     max-width: 400px;
     word-wrap: break-word;
@@ -15,32 +17,33 @@
         sans-serif;
 }
 
-
+/*This controls the aesthetics and location of the legend*/
 .legend {
     position: absolute;
     background-color: rgba(255, 255, 255, 0.7);
     bottom: 0;
     right: 0;
-    margin: 0 10px 30px 5px; /*top margin, right margin, bottom margin, left margin*/
+    margin: 0 10px 30px 5px;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     max-width: 150px;
 }
 
-
+/*This controls the aesthetics and location of the title*/
 .title {
     position: absolute;
     background-color: rgba(255, 255, 255, 0.7);
     top: 0;
     right: 0;
-    margin: 5px 10px 30px 5px; /*top margin, right margin, bottom margin, left margin*/
+    margin: 5px 10px 30px 5px;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     max-width: 450px;
 }
 
+/*This controls the margin of the heading in the legend*/
 .legend h4 {
     margin: 0 0 10px;
 }
@@ -51,15 +54,15 @@
 
 .legend span {
     display: inline-block;
-    border-radius: 50%; /*curve border to make a circle*/
-    height: 10px; /*size of circle*/
+    border-radius: 50%; 
+    height: 10px;
     width: 10px;
-    margin-right: 5px; /*position of circle*/
+    margin-right: 5px; 
 }
 
 /* Add colour to each child div in legend */
 .legend div:nth-child(2) span {
-    background-color: #0066cc; /* set background colour of span */
+    background-color: #0066cc; 
 }
 
 .legend div:nth-child(3) span {
